--- a/index.html
+++ b/index.html
@@ -8,36 +8,53 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
 
-
         <title>API Request</title>
     </head>
     <body>
-        <h2>verificando consumo api</h2>
+        <main>
 
-        <div id="show-values">
-            <strong>Desenvolvedor:</strong> <span id="developer"></span> <br>
-            <strong>Versão:</strong> <span id="version"></span> <br>
-            <strong>Valor da Variável:</strong> <span id="value-of-variable"></span> <br>
-            <strong>Site da Empresa:</strong> <span id="company-site"></span>            
-        </div>
+            <header>
+                <div class="container text-center">
+                    <div class="row">
+                        <h2>
+                            VERIFICANDO CONSUMO DA API
+                        </h2>    
+                    </div>
+                </div>
+            </header>
 
-        <footer>
+            <article>
+                <div class=""container text-center">                    
+                    <div class="row">
+                        <center>
+                            <button 
+                                type="button" 
+                                class="btn btn-success"
+                                style="width: 250px;">
+                                    Fazer chamada
+                            </button>
+                        </center>
+                        <!-- <div class="col">
+                            <div id=""show-values">
+                                <strong>Desenvolvedor:</strong> <span id="developer"></span><br>
+                                <strong>Versão:</strong> <span id="version"></span><br>
+                                <strong>Valor da Variável:</strong> <span id="value-of-variable"></span><br>
+                                <strong>Site da Empresa:</strong> <span id="company-site"></span>      
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+            </article>
 
-        </footer>
+            <footer>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+            </footer>
 
-        <script>
-            $.ajax({
-                type: 'get',
-                url: "http://localhost:8000/hello-world?info=Odnumalo"
-            }).done(function(data) { 
-                document.getElementById('developer').innerHTML = data.manager_developer
-                document.getElementById('version').innerHTML = data.version
-                document.getElementById('value-of-variable').innerHTML = data.value_of_variable
-                document.getElementById('company-site').innerHTML = data.website_company
-            });    
-        </script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+            <script>src="app.js"</script>
+
+           
+        </main>
     </body>    
 </html>
