--- a/index.html
+++ b/index.html
@@ -24,24 +24,27 @@
             </header>
 
             <article>
+                <center>
+                    <div id="show-values" class="row">
+                        <strong>Desenvolvedor:</strong> <span id="developer"></span><br>
+                        <strong>Versão:</strong> <span id="version"></span><br>
+                        <strong>Valor da Variável:</strong> <span id="value-of-variable"></span><br>
+                        <strong>Site da Empresa:</strong> <span id="company-site"></span><br>                             
+                    </div>
+                </center>
+
                 <div class=""container text-center">                    
                     <div class="row">
                         <center>
                             <button 
                                 type="button" 
                                 class="btn btn-success"
-                                style="width: 250px;">
+                                style="width: 250px;"
+                                onclick="requestOfServer()" 
+                                >
                                     Fazer chamada
                             </button>
                         </center>
-                        <!-- <div class="col">
-                            <div id=""show-values">
-                                <strong>Desenvolvedor:</strong> <span id="developer"></span><br>
-                                <strong>Versão:</strong> <span id="version"></span><br>
-                                <strong>Valor da Variável:</strong> <span id="value-of-variable"></span><br>
-                                <strong>Site da Empresa:</strong> <span id="company-site"></span>      
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </article>
@@ -52,7 +55,7 @@
 
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-            <script>src="app.js"</script>
+            <script src="app.js"></script>
 
            
         </main>
