--- a/cars.html
+++ b/cars.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>Preencha os dados do cliente</title>
-        <link rel="stylesheet"  href="style.css">        
+        <meta charset="UTF-8">
+        <link rel="stylesheet"  href="style.css">  
+        <title>Cadastrar carros</title>
     </head>
     <body>
         <header>
-            <h3>Formulário POST</h3>
+            <h2>CADASTRE UM AUTOMÓVEL!</h2>
         </header>
         <main>
             <article>
                 <h3>Preencha os Dados a Seguir</h3>
             </article>
             <form>                 
-                <label>Nome</label>
+                <label>Modelo</label>
                 <br>
-                <input id="name" placeholder="Digite o seu nome" type="text">
+                <input id="name" placeholder="Nome do carro" type="text">
                 <br>
                 <br>
                 
-                <label>Sobrenome</label>
+                <label>Marca</label>
                 <br>                
-                <input id="lastname" placeholder="Digite o seu sobrenome" type="text">
+                <input id="car_model" placeholder="Marca do carro" type="text">
                 <br>
                 <br>
 
-                <label>Idade</label>
+                <label>Ano</label>
                 <br>                
-                <input id="age" placeholder="Idade" type="number" min="0" max="100">
+                <input id="year" placeholder="Ano do carro" type="number">
                 <br>
                 <br>
 
-                <button type="button" onclick="submitDataOfUser()">Enviar</button>
+                <label>Motor</label>
+                <br>                
+                <input id="motorization" placeholder="Motor do carro" type="number">
+                <br>
+                <br>
+
+                <button type="button" onclick="submitCar()">Enviar</button>
                 <br>
                 <br>
                 
@@ -47,8 +53,6 @@
                     <svg  onclick="closeSuccessMsg()" fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 30 30" height="15px"><path d="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z"/></svg>
                 </div>
             </div>
-
-
         </main>
         <footer>
             <span>Feito por: Bernardo Busatto</span>
@@ -57,6 +61,5 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="app.js"></script>
-
     </body>
-</html> 
+</html>
