mensagem de erro css

--- a/post.html
+++ b/post.html
@@ -39,7 +39,7 @@
             </form>
             <br>
             <br>
-            <div id="success-record-msg" class="sucess-record">
+            <div id="success-record-msg" class="success-record">
                 <div>
                     Seu registro foi executado com sucesso
                 </div> 
